add reset button functionality

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     </main>
     <div id="reset-bar">
         <div id="reset-board">  
-            <button type="button" class="btn btn-outline-primary" id="reset-btn">RESET</button>
+            <button type="button" class="btn btn-outline-primary" id="reset-btn">PLAY</button>
         </div>
         <div id="stain-board">
             <p>IMAGE HERE</p>
