--- a/index.html
+++ b/index.html
@@ -199,7 +199,9 @@
         </div>
     </aside>
     <main>
-        <div class="card"></div>
+        <div class="card">
+            <img src="images/AL.png" alt="">
+        </div>
     </main>
     <div id="reset-bar">
         <div id="reset-board">  
