update to include passport cover and logo

--- a/index.html
+++ b/index.html
@@ -200,10 +200,13 @@
         </div>
     </aside>
     <main>
-        <div class="card">
+        <div class="card cover">
         </div>
     </main>
     <div id="reset-bar">
+        <div id="logo-board">
+            <img src="assets/bclogo.png" alt="logo" id="corner-logo">
+        </div>
         <div id="reset-board">  
             <button type="button" class="btn btn-outline-primary" id="reset-btn">PLAY</button>
         </div>
