add passport page images

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <img src="assets/bclogo.png" alt="logo" id="corner-logo">
         </div>
         <div id="reset-board">  
-            <button type="button" class="btn btn-outline-primary" id="reset-btn">PLAY</button>
+            <button type="button" class="btn btn-outline-success" id="reset-btn">PLAY</button>
         </div>
         <div id="stain-board">
             <p>IMAGE HERE</p>
