added corner papers

--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
         <div id="reset-board">  
             <button type="button" class="btn btn-outline-success" id="reset-btn">PLAY</button>
         </div>
-        <div id="stain-board">
-            <p>IMAGE HERE</p>
+        <div id="corner-paper-board">
+            <img src="assets/cornerPapers.png" alt="" id="corner-papers">
         </div>
     </div>
 </body>
