added text box h1

--- a/index.html
+++ b/index.html
@@ -200,7 +200,12 @@
         </div>
     </aside>
     <main>
-        <div class="card cover">
+        <div id="text-box">
+            <p>YOU THERE! BORDER CHECK.</p>
+        </div>
+        <div id="card-container">
+            <div class="card cover">
+            </div>
         </div>
     </main>
     <div id="reset-bar">
