add dynamic message box for cards

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </aside>
                 <main>
                     <div id="text-box">
-                        <p>YOU THERE! BORDER CHECK.</p>
+                        <h3 id="text-message"></h3>
                     </div>
                     <div id="card-container">
                         <div class="card cover">
