--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
                         <h3 id="text-message"></h3>
                     </div>
                     <div id="card-container">
+                        <div id="wrong-guesses" class="closed"></div>
                         <div class="card cover">
                         </div>
                     </div>
@@ -249,6 +250,5 @@
                     </div>
                 </div> 
     </div>
-    
 </body>
 </html>
